# datagen

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  main.cpp
.github/workflows/: build-apple-clang.yml  build-clang.yml  build-coverage.yml  build-gcc.yml  build-msvc.yml
dev/: input_example.json  input_example_json.json  input_example_sql.json  output.csv  output.json  output.sql
docs/: example_file.json  example_mysql_db.json  example_oracle_db.json  example_postgresql_db.json  example_sqlite_db.json  input_example.json  schema_mysql.sql  schema_postgresql.sql
docs/schema/latest/: datagen.schema.json
docs/schema/v1/: datagen.schema.json
examples/: example_file.json  example_mysql_db.json  example_oracle_db.json  example_postgresql_db.json  example_sqlite_db.json  input_example.json  schema_oracle.sql  schema_sqlite.sql
input/: input_example.json
schema/: data-generator.schema.json  datagen.schema.json
src/: CMakeLists.txt  main.cpp
src/app/: run.cpp  run.h
src/cli/: cli_dispatcher.cpp  cli_dispatcher.h  cli_shared.cpp  cli_shared.h  command_check.cpp  command_check.h  command_describe.cpp  command_describe.h  command_drivers.cpp  command_drivers.h  command_generate.cpp  command_generate.h  command_help.cpp  command_help.h  command_info.cpp  command_info.h  command_init.cpp  command_init.h  command_list.cpp  command_list.h  command_preview.cpp  command_preview.h  command_run.cpp  command_run.h  command_schema.cpp  command_schema.h  command_validate.cpp  command_validate.h  exit_codes.h  generator_catalog.cpp  generator_catalog.h
src/config/: configuration.cpp  configuration.h  generator_catalog.cpp  generator_catalog.h
src/core/: configuration.cpp  configuration.h  env_utils.cpp  env_utils.h  executor.cpp  executor.h  progress_bar.cpp  progress_bar.h  serialization.cpp  serialization.h  workspace.cpp  workspace.h
src/database/: db_metadata.cpp  db_metadata.h  db_schema_validator.cpp  db_schema_validator.h  db_url_parser.cpp  db_url_parser.h  odbc_registry.cpp  odbc_registry.h  type_adapter.cpp  type_adapter.h
src/database/driver/: idatabase_driver.cpp  idatabase_driver.h  mysql_driver.cpp  mysql_driver.h  odbc_driver.cpp  odbc_driver.h  oracle_driver.cpp  oracle_driver.h  postgresql_driver.cpp  postgresql_driver.h  sqlite_driver.cpp  sqlite_driver.h
src/engine/: executor.cpp  executor.h
src/generator/: array_parser.cpp  array_parser.h  business_generators.cpp  business_generators.h  computer_generators.cpp  computer_generators.h  generator_base.h  generator_registry.cpp  generator_registry.h  linkage_helper.cpp  linkage_helper.h  location_generators.cpp  number_generators.cpp  number_generators.h  override_rules.cpp  payment_generators.cpp  person_generators.cpp  product_generators.h  string_generators.cpp  utility_generators.cpp
src/generators/: array_parser.cpp  business_generators.cpp  computer_generators.cpp  computer_generators.h  datetime_generators.cpp  datetime_generators.h  generator_registry.h  linkage_helper.cpp  linkage_helper.h  location_generators.cpp  location_generators.h  number_generators.cpp  override_rules.cpp  override_rules.h  payment_generators.cpp  payment_generators.h  person_generators.cpp  person_generators.h  product_generators.cpp  string_generators.cpp  string_generators.h  utility_generators.cpp  utility_generators.h
src/generators/core/: array_parser.cpp  array_parser.h  generator_base.h  generator_registry.cpp  generator_registry.h  linkage_helper.cpp  linkage_helper.h  override_rules.cpp  override_rules.h
src/generators/types/: business_generators.cpp  business_generators.h  computer_generators.cpp  computer_generators.h  datetime_generators.cpp  datetime_generators.h  location_generators.cpp  location_generators.h  number_generators.cpp  number_generators.h  payment_generators.cpp  payment_generators.h  person_generators.cpp  person_generators.h  product_generators.cpp  product_generators.h  string_generators.cpp  string_generators.h  utility_generators.cpp  utility_generators.h
src/logging/: logger.cpp  logger.h
src/output/: database_backend.cpp  database_backend.h  file_backend.cpp  file_backend.h  output_backend.cpp  output_backend.h
src/output/database/: db_metadata.cpp  db_metadata.h  db_schema_validator.cpp  db_schema_validator.h  db_url_parser.cpp  db_url_parser.h  odbc_registry.cpp  odbc_registry.h  type_adapter.cpp  type_adapter.h
src/output/database/drivers/: idatabase_driver.cpp  idatabase_driver.h  odbc_driver.cpp  odbc_driver.h  sqlite_driver.cpp  sqlite_driver.h
src/output/file/: csv_writer.cpp  csv_writer.h  json_writer.cpp  json_writer.h  sql_writer.cpp  sql_writer.h
src/utils/: env_utils.cpp  env_utils.h  workspace.cpp  workspace.h
tests/: CMakeLists.txt  test_array_parser.cpp  test_cli_commands.cpp  test_cli_shared.cpp  test_configuration.cpp  test_configuration_edge.cpp  test_database_backend.cpp  test_db_metadata.cpp  test_db_schema_validator.cpp  test_db_url_parser.cpp  test_executor.cpp  test_executor_edge.cpp  test_file_backend.cpp  test_file_writers.cpp  test_generators_smoke.cpp  test_linkage_and_registry.cpp  test_linkage_conflicts.cpp  test_odbc_driver.cpp  test_odbc_registry.cpp  test_output_backend.cpp  test_override_rules.cpp  test_paths.h  test_run.cpp  test_serialization.cpp  test_sqlite_driver.cpp  test_type_adapter.cpp  test_utility_generators.cpp  test_workspace.cpp
tests/inputs/: malformed.json  missing_fields.json  run_valid.json
